--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,85 @@
-# Compiled class file
+
+# Lines that start with '#' are comments.
+# For a project mostly in C, the following would be a good set of
+# exclude patterns (uncomment them if you want to use them):
+# *.[oa]
+# *~
+# Compiled source #
+###################
+*.com
 *.class
+*.dll
+*.exe
+*.o
+*.so
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
 *.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
 *.rar
+*.tar
+*.zip
+*.war
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*.settings
+*.metadata
+*.classpath
+*.project
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Audio Files #
+###############
+*.wav
+*.mp3
+*.wma
+
+# Video Files #
+###############
+*.wmv
+*.mpg
+*.mpeg
+*.mp4
+*.mov
+*.flv
+*.avi
+*.ogv
+*.ogg
+*.webm
+
+# Image Files #
+###############
+*.svg
+*.ico
+
+# Folders #
+###########
+target/*
+.idea/**
+
+# Documents #
+#############
+/.idea/
+*.iml
+/.idea/libraries/
+/target/
